Style(scss): update styles for various components and fix spacing issues

--- a/src/scss/base/_classes.scss
+++ b/src/scss/base/_classes.scss
@@ -7,11 +7,11 @@
 
   padding: 0.5em 1em;
 
+  transition: background-color 0.3s;
   letter-spacing: 0.1em;
 
   border-width: 2px;
   border-style: solid;
-  transition: background-color 0.3s;
 
   &:hover,
   &:focus {
@@ -19,27 +19,23 @@
   }
 
   &--light {
-    background-color: rgba($color-white, 0.1);
     border-color: $color-white;
+    background-color: rgba($color-white, 0.1);
 
     @include lg-min {
       min-width: 250px;
       min-height: 60px;
+
       font-size: 1.125rem;
     }
-
     @include lg-md {
       min-width: 200px;
       min-height: 50px;
     }
-
     @include md {
       min-width: 170px;
       min-height: 40px;
     }
-  }
-
-  &--primary {
   }
 }
 
